// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a pending plugin notif 1`] = `
<PendingPluginsActionNotif
  fetchSystemStatus={[MockFunction]}
  pending={
    {
      "installing": [
        {
          "implementationBuild": "1",
          "key": "foo",
          "name": "Foo",
          "version": "1.0",
        },
      ],
      "removing": [],
      "updating": [],
    }
  }
  refreshPending={[MockFunction]}
  systemStatus="UP"
/>
`;

exports[`should display restart notif 1`] = `<SystemRestartNotif />`;

exports[`should render correctly when governance is active 1`] = `
<ContextNavBar
  height={72}
  id="context-navigation"
>
  <div
    className="navbar-context-header"
  >
    <h1>
      layout.settings
    </h1>
  </div>
  <NavBarTabs>
    <Dropdown
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              end={true}
              to="/admin/settings"
            >
              settings.page
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/settings/encryption"
            >
              property.category.security.encryption
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/webhooks"
            >
              webhooks.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to="/admin/extension/governance/views_console"
            >
              governance
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <Dropdown
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              end={true}
              to="/admin/users"
            >
              users.page
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/groups"
            >
              user_groups.page
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/permissions"
            >
              global_permissions.page
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/permission_templates"
            >
              permission_templates
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <Dropdown
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              end={true}
              to="/admin/projects_management"
            >
              management
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/background_tasks"
            >
              background_tasks.page
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <NavLink
        end={true}
        to="/admin/system"
      >
        sidebar.system
      </NavLink>
    </li>
    <li>
      <NavLink
        end={true}
        to="/admin/marketplace"
      >
        marketplace.page
      </NavLink>
    </li>
    <li>
      <NavLink
        end={true}
        to="/admin/audit"
      >
        audit_logs.page
      </NavLink>
    </li>
  </NavBarTabs>
</ContextNavBar>
`;

exports[`should work with extensions 1`] = `
<ContextNavBar
  height={72}
  id="context-navigation"
>
  <div
    className="navbar-context-header"
  >
    <h1>
      layout.settings
    </h1>
  </div>
  <NavBarTabs>
    <Dropdown
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              end={true}
              to="/admin/settings"
            >
              settings.page
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/settings/encryption"
            >
              property.category.security.encryption
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/webhooks"
            >
              webhooks.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to="/admin/extension/foo"
            >
              Foo
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <Dropdown
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              end={true}
              to="/admin/users"
            >
              users.page
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/groups"
            >
              user_groups.page
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/permissions"
            >
              global_permissions.page
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/permission_templates"
            >
              permission_templates
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <Dropdown
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              end={true}
              to="/admin/projects_management"
            >
              management
            </NavLink>
          </li>
          <li>
            <NavLink
              end={true}
              to="/admin/background_tasks"
            >
              background_tasks.page
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <NavLink
        end={true}
        to="/admin/system"
      >
        sidebar.system
      </NavLink>
    </li>
    <li>
      <NavLink
        end={true}
        to="/admin/marketplace"
      >
        marketplace.page
      </NavLink>
    </li>
  </NavBarTabs>
</ContextNavBar>
`;

exports[`should work with extensions 2`] = `
[
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <NavLink
            end={true}
            to="/admin/settings"
          >
            settings.page
          </NavLink>
        </li>
        <li>
          <NavLink
            end={true}
            to="/admin/settings/encryption"
          >
            property.category.security.encryption
          </NavLink>
        </li>
        <li>
          <NavLink
            end={true}
            to="/admin/webhooks"
          >
            webhooks.page
          </NavLink>
        </li>
        <li>
          <NavLink
            to="/admin/extension/foo"
          >
            Foo
          </NavLink>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>,
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <NavLink
            end={true}
            to="/admin/users"
          >
            users.page
          </NavLink>
        </li>
        <li>
          <NavLink
            end={true}
            to="/admin/groups"
          >
            user_groups.page
          </NavLink>
        </li>
        <li>
          <NavLink
            end={true}
            to="/admin/permissions"
          >
            global_permissions.page
          </NavLink>
        </li>
        <li>
          <NavLink
            end={true}
            to="/admin/permission_templates"
          >
            permission_templates
          </NavLink>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>,
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <NavLink
            end={true}
            to="/admin/projects_management"
          >
            management
          </NavLink>
        </li>
        <li>
          <NavLink
            end={true}
            to="/admin/background_tasks"
          >
            background_tasks.page
          </NavLink>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>,
]
`;
